src/main/java/com/example/jobala/_core/errors/apiException/ApiException404.java
package com.example.jobala._core.errors.apiException;

public class ApiException404 extends RuntimeException {

    public ApiException404(String msg) {
        super(msg);
    }
}
